# sovereign-stack

./: .gitignore  BUILD_LOG.md  COPILOT_GUIDE.md  DEMO.md  KEYBIND_GUIDE.md  LEXICON.md  README.md  amallo-brain  amallo-diffusion  amallo-discord  amallo-mesh  amallo-quant  amallo-sms  amallo_controller.py  amallo_server.py  axis  axischrome  clank.html  claude_desktop_config.json  deploy-models.sh  deploy-sovereign-run.sh  gguf_server.py  groovebox.html  index.html  install-copilot.sh  install-keybind.sh  install.sh  jerry_rig_manifesto.md  kernel-mustard  marshal.py  mesh.html  mesh.json  nexus.py  nginx-demo.conf  nginx-km.conf  nginx-mesh.conf  nginx-sms.conf  nginx-syncthing.conf  operator.html  oracle.py  (+15 more)
.github/workflows/: release.yml
sov/: __init__.py  __main__.py  cli.py  ggufwomb.py  ide.py  launch.py  ui.py  ui.py.bak
tools/: CYMATICS_QUICK_START.md  CYMATICS_README.md  INDEX.md  MANIFEST.md  axischrome.py  cymatics.py  green-team.py  human-voice.sh  mesh-deploy.sh  speak-stop.sh  speak.sh  subterminal.sh  vision-ws.py  voice-daemon.py
